--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -49,14 +49,8 @@ body {
     background-size: 100%;
 }
 
-.main-content {
-    margin: 0 auto;
-    max-width: 900px;
-    padding: 10px 20px;
-}
-
 .login {
-    margin: 8% auto 0;
+    margin: 5% auto 0;
     max-width: 500px;
     background: rgb(0,0,0,.4);
     border-radius: 6px;
@@ -157,4 +151,250 @@ body {
     padding: 6px 15px;
     background: #ff4848;
     border-radius: 3px;
+}
+
+/* container */
+.container {
+    margin: 10px auto;
+    max-width: 900px;
+    border-radius: 6px;
+    box-shadow: 0px 0px 8px white;
+    font-size: 0;
+    padding-bottom: 15px;
+}
+
+/* header */
+
+.header-wrapper {
+    padding: 10px 20px;
+    background: #565555;
+    font-size: 0;
+}
+
+.logo-wrapper {
+    display: inline-block;
+    width: 30%;
+    vertical-align: middle;
+}
+
+.logo-image {
+    width: 65px; 
+}
+
+.header-login-info {
+    display: inline-block;
+    width: 70%;
+    vertical-align: middle;
+    font-size: 18px;
+    text-align: right;
+    color: #FFF;
+}
+
+.header-datetime {
+    padding-bottom: 8px;
+    font-size: 14px;
+}
+
+.header-loginas {
+    position: relative;
+}
+
+.arrow-down {
+    font-size: 12px;
+    padding: 0 0px 0 5px;
+    display: inline-block;
+    vertical-align: middle;
+    cursor: pointer;
+}
+
+.toggle-menu {
+    display: none;
+    background: #a9a9a9;
+    width: 20%;
+    position: absolute;
+    right: 0;
+    top: 35px;
+    text-align: left;
+    border: 2px solid #ffe721;
+}
+
+.logout-button {
+    text-decoration: none;
+    padding: 8px 10px;
+    display: block;
+    color: #FFF;
+}
+
+.logout-button:hover {
+    background: yellow;
+    color: #a9a9a9;
+}
+
+/* navigation menu */
+.navigation {
+    background: #464646;
+    font-size: 0;
+    padding-left: 10px;
+}
+
+.navigation-item {
+    display: inline-block;
+    width: 15%;
+    font-size: 16px;
+    vertical-align: middle;
+}
+
+.navigation-link {
+    display: block;
+    padding: 10px 8px;
+    text-align: center;
+    color: #ffe721;
+    text-decoration: none;
+}
+
+.navigation-link:hover {
+    background: #ffe721;
+    color: #464646;
+    border-right: 1px solid #565555;
+}
+
+.navigation-link.active {
+    background: #ffe721;
+    color: #464646;
+    border-right: 1px solid #565555;
+}
+
+.navigation-search-wrapper {
+    display: inline-block;
+    width: 55%;
+    vertical-align: middle;
+}
+.navigation-search {
+    padding: 10px;
+}
+
+.search_selectbox-wrapper {
+    display: inline-block;
+    width: 25%;
+}
+
+.search_input-wrapper {
+    display: inline-block;
+    width: 60%;
+}
+
+.search-button-wrapper {
+    display: inline-block;
+    width: 15%;
+}
+
+.search_box {
+    width: 100%;
+    padding: 6px;
+    box-sizing: border-box;
+}
+
+.search_input {
+    width: 100%;
+    padding: 6px;
+    box-sizing: border-box;
+}
+
+.search-button {
+    width: 100%;
+    background: #ffe721;
+    padding: 6px;
+    border: 2px solid #ffe721;
+    cursor: pointer;
+}
+
+.title {
+    font-size: 34px;
+    display: block;
+    text-align: center;
+    padding: 20px;
+    font-weight: 600px;
+    color: #ffd200;
+}
+
+.sidebar {
+    display: inline-block;
+    width: 22%;
+    vertical-align: top;
+    margin-right: 2%;
+    margin-left: 1%;
+    font-size: 16px;
+    background: white;
+    box-sizing: border-box;
+    border-radius: 3px;
+    height: 400px;
+    box-shadow: 0px 0px 5px white
+}
+
+.sidebar-title {
+    font-size: 18px;
+    padding: 6px;
+    background: #565555;
+    color: #ffd200;
+}
+
+.content {
+    display: inline-block;
+    width: 74%;
+    vertical-align: top;
+    font-size: 16px;
+    background: white;
+    box-sizing: border-box;
+    border-radius: 3px;
+    box-shadow: 0px 0px 5px white;
+    height: 400px;
+}
+
+.content-title {
+    font-size: 18px;
+    padding: 6px;
+    background: #565555;
+    color: #ffd200;
+}
+
+.form-container {
+    text-align: center;
+    padding-top: 60px;
+}
+
+.form-field {
+    padding: 10px;
+}
+
+.form-label {
+    display: inline-block;
+    width: 15%;
+    vertical-align: middle;
+}
+
+.form-input {
+    width: 40%;
+    display: inline-block;
+    vertical-align: middle;
+    padding: 6px;
+    border-radius: 3px;
+    border: 1px solid #CCC;
+    box-shadow: 0 0 5px #CCC;
+}
+
+.form-button {
+    padding: 8px;
+    background: #ffe721;
+    color: #464646;
+    border: 1px solid #CCC;
+    box-shadow: 0 0 5px #CCC;
+    width: 47%;
+    cursor: pointer;
+}
+
+.form-button-wrapper {
+    width: 30%;
+    margin: 0 auto;
+    text-align: right;
+    padding: 20px;
 }
