--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -153,6 +153,13 @@ body {
     border-radius: 3px;
 }
 
+.flash-success {
+    color: #FFF;
+    padding: 6px 15px;
+    background: #24f179;
+    border-radius: 3px;
+}
+
 /* container */
 .container {
     margin: 10px auto;
@@ -358,7 +365,6 @@ body {
     box-sizing: border-box;
     border-radius: 3px;
     box-shadow: 0px 0px 5px white;
-    height: 400px;
 }
 
 .content-title {
@@ -369,43 +375,135 @@ body {
 }
 
 .form-container {
-    text-align: center;
-    padding-top: 60px;
+    max-width: 450px;
+    margin: 0 auto;
+    padding: 20px 0;
+}
+
+.form-container-adduser {
+    padding: 45px 0;
 }
 
 .form-field {
-    padding: 10px;
+    padding: 10px 10px 5px;
 }
 
 .form-label {
     display: inline-block;
-    width: 15%;
-    vertical-align: middle;
+    width: 25%;
+    vertical-align: top;
+}
+
+.form-input-wrapper {
+    width: 70%;
+    display: inline-block;
+    vertical-align: top;
 }
 
 .form-input {
-    width: 40%;
-    display: inline-block;
-    vertical-align: middle;
-    padding: 6px;
+    width: 100%;
     border-radius: 3px;
     border: 1px solid #CCC;
     box-shadow: 0 0 5px #CCC;
+    padding: 6px;
+}
+
+.form-textarea {
+    width: 100%;
+    border-radius: 3px;
+    border: 1px solid #CCC;
+    box-shadow: 0 0 5px #CCC;
+    padding: 6px;
+    height: 95px;
+    resize: none;
 }
 
 .form-button {
+    display: inline-block;
+    text-decoration: none;
     padding: 8px;
     background: #ffe721;
     color: #464646;
     border: 1px solid #CCC;
     box-shadow: 0 0 5px #CCC;
-    width: 47%;
+    width: 40%;
     cursor: pointer;
 }
 
 .form-button-wrapper {
-    width: 30%;
     margin: 0 auto;
-    text-align: right;
+    text-align: center;
     padding: 20px;
+}
+
+.error-message {
+    display: block;
+    color: #ff4848;
+}
+
+.content-confirm {
+    width: 98%;
+    margin-left: 1%;
+}
+
+.success-message {
+    text-align: center;
+}
+
+.success-message-text {
+    display: block;
+    font-size: 20px;
+}
+
+.success-message-text:nth-child(2) {
+    font-size: 28px;
+    color: #000;
+    font-weight: 600;
+}
+
+.search-files {
+    font-size: 0;
+    padding: 10px;
+}
+
+.search-list {
+    display: inline-block;
+    width: 25%;
+    vertical-align: top;
+    font-size: 14px;
+    height: 140px;
+    padding: 8px;
+    box-sizing: border-box;
+    cursor: pointer;
+    margin-bottom: 10px;
+}
+
+.search-list:hover {
+    transition: .2s;
+    opacity: .8;
+}
+
+.search-list:hover .search-image {
+    transform: scale(1.2);
+    transition: 1s;
+}
+
+.search-item {
+    overflow: hidden;
+}
+
+.search-image {
+    width: 100%;
+    object-fit: contain;
+    border-radius: 3px;
+    height: 100px;
+    overflow: hidden;
+}
+
+.search-filename {
+    display: block;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    padding: 5px 0;
 }
