--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -507,3 +507,90 @@ body {
     overflow: hidden;
     padding: 5px 0;
 }
+
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: rgb(0,0,0,.4);
+    font-size: 0;
+    width: 100%;
+    height: 100%;
+    transition: 1s;
+    visibility: hidden;
+}
+
+.modal.modalShow {
+    visibility: visible;
+}
+
+.modal-container {
+    margin: 5% auto;
+    width: 900px;
+    box-shadow: 0px 0px 15px #FFF;
+    border: 1px solid #000;
+    background: #ececec;
+    border-radius: 6px;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+.modal-image-wrapper {
+    width: 40%;
+    display: inline-block;
+    text-align: center;
+    vertical-align: middle;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+.modal-image {
+    width: 100%;
+    height: 200px;
+    object-fit: contain;
+}
+
+.modal-image-content {
+    display: inline-block;
+    width: 60%;
+    padding: 20px;
+    box-sizing: border-box;
+    vertical-align: middle;
+    border-left: 1px solid #272727;
+}
+
+.modal-content-list {
+    padding: 10px 8px;
+    border-bottom: 1px dashed #272727;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.modal-content-label {
+    width: 30%;
+    display: inline-block;
+    font-size: 16px;
+    vertical-align: top;
+}
+
+.modal-content-info {
+    width: 70%;
+    display: inline-block;
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.modal-button-wrapper {
+    padding: 20px 20px 0;
+    box-sizing: border-box;
+    text-align: center;
+}
+
+.button-close {
+    background: #ff4848;
+    color: #FFF;
+    border-radius: 5px;
+    border: 1px solid #ff4848;
+    padding: 10px 20px;
+    cursor: pointer;
+}
