--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -594,3 +594,17 @@ body {
     padding: 10px 20px;
     cursor: pointer;
 }
+
+.activity-table {
+    padding: 20px;
+    box-sizing: border-box;
+    text-align: center;
+}
+
+.button-delete {
+    background: #ff4848;
+    color: #FFF;
+    border: 1px solid #ff4848;
+    padding: 5px;
+    cursor: pointer;
+}
