--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -524,7 +524,7 @@ body {
     position: fixed;
     top: 0;
     left: 0;
-    background: rgb(0,0,0,.4);
+    background: rgb(0,0,0,0.8);
     font-size: 0;
     width: 100%;
     height: 100%;
