--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -46,7 +46,7 @@ body {
     padding: 0;
     margin: 0;
     background: url( '../img/common/background.png' ) no-repeat;
-    background-size: 100%;
+    background-size: cover;
 }
 
 .login {
@@ -634,4 +634,40 @@ body {
     border: 1px solid #ff4848;
     padding: 5px;
     cursor: pointer;
+}
+
+.pagination {
+    font-size: 0;
+    padding: 20px 0;
+    width: 100%;
+    text-align: center;
+}
+
+.pagination-list {
+    display: inline-block;
+}
+
+.pagination-item {
+    font-size: 14px;
+    background: #565555;
+    display: inline-flex;
+    text-decoration: none;
+    width: 30px;
+    height: 30px;
+    vertical-align: middle;
+    margin-right: 5px;
+    color: #fff;
+    box-shadow: 0 0 10px #a8a8a8;
+    justify-content: center;
+    align-items: center;
+}
+
+.pagination-item:hover {
+    background: #ffe721;
+    color: #383838;
+}
+
+.pagination-item.pagination-item--active {
+    background: #ffe721;
+    color: #383838;
 }
