--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -69,7 +69,7 @@ body {
 }
 
 .login-placeholder-icon {
-    font-size: 100px;
+    font-size: 85px;
     color: #929090;
     box-shadow: 0px 0px 18px #4e4e4e;
     width: 100px;
@@ -78,6 +78,8 @@ body {
     left: 38%;
     top: -55px;
     background: #393a39;
+    text-align: center;
+    padding: 5px 2px 10px;
 }
 
 .login-field {
@@ -220,8 +222,8 @@ body {
 }
 
 .arrow-down {
-    font-size: 12px;
-    padding: 0 0px 0 5px;
+    font-size: 16px;
+    padding: 0 0px 0 2px;
     display: inline-block;
     vertical-align: middle;
     cursor: pointer;
