--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -337,9 +337,10 @@ body {
 }
 
 .sidebar-user-image img {
-    width: 80px;
-    height: 80px;
+    width: 75px;
+    height: 75px;
     object-fit: cover;
+    opacity: 0.2;
 }
 
 .sidebar-user-image span {
@@ -738,14 +739,24 @@ body {
 
 .sidebar-item-sub {
     padding-bottom: 3px;
+    padding-left: 20px;
     position: relative;
+    cursor: pointer;
 }
 .sidebar-input {
     display: block;
     margin-left: 20px;
     padding: 5px;
+    width: 150px;
 }
-
+.sidebar-text {
+    display: inline-block;
+}
+div[contenteditable=true] {
+    border: 1px solid #ccc;
+    padding-left: 5px;
+    width: initial;
+}
 .tooltip {
     position: fixed;
     background: #fff;
