--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -54,7 +54,6 @@ body {
     max-width: 500px;
     background: rgb(0,0,0,.4);
     border-radius: 6px;
-    box-shadow: 0px 0px 8px white;
     padding: 100px 50px 50px;
     box-sizing: border-box;
 }
@@ -68,18 +67,14 @@ body {
     position: relative;
 }
 
-.login-placeholder-icon {
-    font-size: 85px;
-    color: #929090;
-    box-shadow: 0px 0px 18px #4e4e4e;
-    width: 100px;
-    border-radius: 50%;
+.login-logo {
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 20px;
     position: absolute;
-    left: 38%;
-    top: -55px;
-    background: #393a39;
-    text-align: center;
-    padding: 5px 2px 10px;
+    top: -50px;
+    width: 100px;
+    left: 150px;
 }
 
 .login-field {
@@ -137,6 +132,7 @@ body {
     width: 100%;
     font-size: 16px;
     cursor: pointer;
+    border-radius: 5px;
 }
 
 .button-submit:active {
@@ -334,13 +330,7 @@ body {
     display: block;
     width: 100%;
     text-align: center;
-}
-
-.sidebar-user-image img {
-    width: 75px;
-    height: 75px;
-    object-fit: cover;
-    opacity: 0.2;
+    padding: 10px 0;
 }
 
 .sidebar-user-image span {
@@ -352,7 +342,7 @@ body {
 }
 
 .sidebar-user-logout {
-    padding: 10px 0 20px;
+    padding: 10px 0 40px;
     text-align: center;
 }
 
@@ -404,7 +394,7 @@ body {
 
 .content-title {
     font-size: 18px;
-    padding: 6px;
+    padding: 6px 20px;
     background: #565555;
     color: #fff;
 }
@@ -711,11 +701,12 @@ body {
 .sidebar-treeview {
     padding: 12px 10px 10px;
     overflow: auto;
-    height: 250px;
+    height: 285px;
 }
 
 .sidebar-treeview-wrapper {
-    width: 1000px;
+    width: 100%;
+    white-space: nowrap;
 }
 
 .sidebar-folder-icon {
