--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -207,12 +207,12 @@ body {
 
 .header-datetime {
     padding-bottom: 8px;
-    font-size: 14px;
+    font-size: 16px;
 }
 
 .header-project-title {
     position: relative;
-    font-size: 20px;
+    font-size: 24px;
     color: #ffe721;
 }
 
@@ -512,7 +512,7 @@ body {
 
 .search-list {
     display: inline-block;
-    width: 25%;
+    width: 20%;
     vertical-align: top;
     font-size: 14px;
     height: 140px;
@@ -549,7 +549,8 @@ body {
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
-    padding: 5px 0;
+    padding: 5px 20px;
+    text-align: center;
 }
 
 .modal {
@@ -560,11 +561,7 @@ body {
     font-size: 0;
     width: 100%;
     height: 100%;
-    visibility: hidden;
-}
-
-.modal.modalShow {
-    visibility: visible;
+    display: none;
 }
 
 .modal-container {
@@ -658,8 +655,10 @@ body {
     background: #ff4848;
     color: #FFF;
     border: 1px solid #ff4848;
-    padding: 5px;
+    padding: 6px;
     cursor: pointer;
+    border-radius: 4px;
+    font-size: 13px;
 }
 
 .pagination {
@@ -770,4 +769,11 @@ div[contenteditable=true] {
 
 .tooltip-text span:last-child {
     border-bottom: none;
+}
+
+.dataTables_wrapper .dataTables_paginate .paginate_button {
+    padding: 0px 10px;
+    border-radius: 4px;
+    font-size: 16px;
+    margin: 10px 0px;
 }
