--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -758,7 +758,7 @@ div[contenteditable=true] {
     width: initial;
 }
 .tooltip {
-    position: fixed;
+    position: absolute;
     background: #fff;
     box-shadow: 0px 0px 5px #000;
     z-index: 999;
@@ -818,4 +818,8 @@ div[contenteditable=true] {
 
 .dashboard-count span {
     padding: 0 15px;
+}
+
+.file-location {
+    display: none;
 }
