--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -155,7 +155,7 @@ body {
 .flash-success {
     color: #FFF;
     padding: 6px 15px;
-    background: #24f179;
+    background: #4dbb7a;
     border-radius: 3px;
     font-size: 14px;
 }
