--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -516,54 +516,6 @@ body {
     font-weight: 600;
 }
 
-.search-files {
-    font-size: 0;
-    padding: 10px;
-}
-
-.search-list {
-    display: inline-block;
-    width: 20%;
-    vertical-align: top;
-    font-size: 14px;
-    height: 140px;
-    padding: 8px;
-    box-sizing: border-box;
-    cursor: pointer;
-    margin-bottom: 10px;
-}
-
-.search-list:hover {
-    transition: .2s;
-    opacity: .8;
-}
-
-.search-list:hover .search-image {
-    transform: scale(1.2);
-    transition: 1s;
-}
-
-.search-item {
-    overflow: hidden;
-}
-
-.search-image {
-    width: 100%;
-    object-fit: contain;
-    border-radius: 3px;
-    height: 100px;
-    overflow: hidden;
-}
-
-.search-filename {
-    display: block;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    padding: 5px 20px;
-    text-align: center;
-}
-
 .modal {
     position: fixed;
     top: 0;
@@ -573,6 +525,7 @@ body {
     width: 100%;
     height: 100%;
     display: none;
+    z-index: 9;
 }
 
 .modal-container {
@@ -662,6 +615,17 @@ body {
     text-align: center;
 }
 
+.file-list {
+    padding: 20px;
+    box-sizing: border-box;
+    text-align: center;
+}
+.button-view-wrapper,
+.button-delete-wrapper {
+    display: inline-block;
+    width: 25%;
+    vertical-align: middle;
+}
 .button-delete {
     background: #ff4848;
     color: #FFF;
@@ -670,42 +634,17 @@ body {
     cursor: pointer;
     border-radius: 4px;
     font-size: 13px;
+    width: 50px;
 }
-
-.pagination {
-    font-size: 0;
-    padding: 20px 0;
-    width: 100%;
-    text-align: center;
-}
-
-.pagination-list {
-    display: inline-block;
-}
-
-.pagination-item {
-    font-size: 14px;
-    background: #565555;
-    display: inline-flex;
-    text-decoration: none;
-    width: 30px;
-    height: 30px;
-    vertical-align: middle;
-    margin-right: 5px;
-    color: #fff;
-    box-shadow: 0 0 10px #a8a8a8;
-    justify-content: center;
-    align-items: center;
-}
-
-.pagination-item:hover {
-    background: #ffe721;
-    color: #383838;
-}
-
-.pagination-item.pagination-item--active {
-    background: #ffe721;
-    color: #383838;
+.button-view {
+    background: #4d4dff;
+    color: #FFF;
+    border: 1px solid #4d4dff;
+    padding: 6px;
+    cursor: pointer;
+    border-radius: 4px;
+    font-size: 13px;
+    width: 50px;
 }
 
 /* SIDEBAR */
