--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -230,7 +230,8 @@ body {
     top: 0;
     right: 0;
     background: #464646;
-    border-top: 1px solid ;
+    border-top: 1px solid #000;
+    text-align: right;
 }
 
 .navigation-item {
@@ -271,12 +272,12 @@ body {
 
 .search_selectbox-wrapper {
     display: inline-block;
-    width: 25%;
+    width: 30%;
 }
 
 .search_input-wrapper {
     display: inline-block;
-    width: 60%;
+    width: 55%;
 }
 
 .search-button-wrapper {
