--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -720,6 +720,7 @@ body {
 }
 .sidebar-text {
     display: inline-block;
+    padding-right: 10px;
 }
 div[contenteditable=true] {
     border: 1px solid #ccc;
@@ -822,4 +823,20 @@ div[contenteditable=true] {
 .activity-table tbody td:last-child,
 .activity-table tbody td:nth-child(2) {
     text-align: center;
+}
+.sidebar-accordion {
+    display: inline-block;
+    position: absolute;
+    left: -5px;
+}
+.sidebar-folder-arrow {
+    color: #beadad;
+}
+.sidebar-text-span {
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 10px;
+}
+.sidebar-folder-arrow.close:before {
+    transform: rotate(270deg);
 }
