--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -630,7 +630,7 @@ body {
 .button-view-wrapper,
 .button-delete-wrapper {
     display: inline-block;
-    width: 25%;
+    width: 60px;
     vertical-align: middle;
 }
 .button-restore-wrapper {
