--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -555,6 +555,15 @@ body {
     object-fit: contain;
 }
 
+@media print {
+    .modal-image {
+        min-height: 200px;
+        width: 100%;
+        height: 100%;
+    }
+}
+
+
 .modal-image-content {
     display: inline-block;
     width: 60%;
